feat: 交易职业显示、避难所权限控制、快速交互、规则书、音乐组件等综合更新